fix : center align menu mobile

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -351,8 +351,10 @@ header.scrolling_up {
           }
         }
         .dropdown-menu {
-          left: 41%;
+          left: 0;
           top: 54px;
+          margin: 0 auto;
+          transform: translate(0px);
         }
       }
     }
